--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Racing game</title>
 </head>
 <body>
-    <div class="car car-1" data-model="bmw"></div>
+    <div class="car car-1" data-model="car"></div>
     <div class="car car-2" data-model="tesla"></div>
     <div class="line start">START</div>
     <div class="line finish">FINISH</div>
